_sass/index.scss
/* ... */
.contact-info-body {
  font-size: .9em;
  background: rgba(255, 255, 255, 0.9);
  padding: 15px 22px 34px 22px;
  color: #858585;
  width: 72%;
  text-align: center;
  margin: 0 auto;
  .contact-row {
    display: flex;
    flex-direction: row;
    flex-flow: row wrap;
    justify-content: center;
    font-size: .7em;
    text-align: left;
    padding-bottom: 9px;
    > div {
      width: 50%;
      > img {
      float: left;
      margin-top: -12px;
      margin-bottom: 8px;
      }
      > span {
        margin-top: 10px;
      }
    }
  }
}

.black {
  color: black;
}
.left {
  float: left;
  width: 49%;
  padding-right: 15px;
}

.right {
  float: right;
  width: 49%;
  padding-left: 1px;
}

.contact-us-link {
  cursor: pointer;
}

.property-slideshow {
  padding-top: 12px;
}

.preview-contents {
  padding: 8px;
}

.underline {
  text-decoration: underline;
}

.preview-map {
  width: 230px;
  position: absolute;
  margin-top: -30px;

}

.preview-title {
  color: white;
  font-size: 1.5em;
  position: absolute;
  margin-top: -65px;
  margin-left: 31px;
}

.medium-white-text {
  color: white;
  font-size: 1.5em;
}

.preview-text {
  font-size: .75em;
  font-weight: lighter;
  color: #858585;
}

.review {
  outline: none;
  padding: 6px 60px;
}

#home-image {
  vertical-align: middle;
}

.logo-upper-left {
  @include mobile-logo;
  position: absolute;
  top: 35px;
  left: 35px;
  width: 278px;
  height: auto;
  z-index: 2;
}

.ham-menu {
  @include hamburger-menu;
}

#top-nav {
  font-size: 14px;
  color: white;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 3;
  > ul {
    list-style-type: none;
    margin: 30px 30px 0 0;
    > li {
      display: inline;
      font-size: 1.2em;
      padding: 8px;
      > a {
        position: relative;
        color: white;
        text-decoration: none;
        line-height: 2;
      }
      > a:hover {
        color: white;
      }
      > a:before {
        content: "";
        position: absolute;
        width: 100%;
        height: 2px;
        bottom: 0;
        left: 0;
        background-color: white;
        visibility: hidden;
        -webkit-transform: scaleX(0);
        transform: scaleX(0);
        -webkit-transition: all 0.3s ease-in-out 0s;
        transition: all 0.3s ease-in-out 0s;
      }
      > a:hover:before {
        visibility: visible;
        -webkit-transform: scaleX(1);
        transform: scaleX(1);
      }
    }
  }
}

.ham-menu-mobile {
  @include hamburger-menu;
}

.ham-menu-home {
  display: none;
}

.contact-form-status {
  padding: 40px;
  display: none;
}

#form-submit-loader {
  padding: 10px;
  display: none;
}

.loader,
.loader:after {
  border-radius: 50%;
  width: 10em;
  height: 10em;
}
.loader {
  margin: 60px auto;
  font-size: 3px;
  position: relative;
  text-indent: -9999em;
  border-top: 1.1em solid #858585;
  border-right: 1.1em solid #858585;
  border-bottom: 1.1em solid #858585;
  border-left: 1.1em solid #ffffff;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: load8 1.1s infinite linear;
  animation: load8 1.1s infinite linear;
}
@-webkit-keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

#submit-contact-form {
  cursor: pointer;
}

.service-detail {
  @include modal;
  .inner {
    padding-bottom: 0;
  }
}

.services-modal-content {
  color: #858585;
  text-align: left;
  .service-detail-close {
    @include close-button-small;
    top: 28px;
    right: 25px;
  }
  .header {
    background-color: $primary-color;
    padding: 25px;
    color: white;
    > h1 {
      margin: 0;
    }
  }

  .content {
    padding: 25px;
    font-size: .8em;
  }
}
.contact-us-modal {
  @include modal;
  .contact-close {
    @include close-button;
    position: absolute;
    color: $primary-color;
    cursor: pointer;
    padding: 21px;
  }
  .form {
    margin: 36px;
    > p {
      padding-top: 75px;
      font-weight: 50;
      margin-bottom: 42px;
      color: #777777;
      font-size: 2em;
    }
    .validation {
      display: block;
      margin: 0 auto 18px auto;
      width: 72%;
      opacity: .8;
      display: none;
      text-align: left;
      color: $primary-color;
    }
    > input {
      display: block;
      margin: 0 auto 18px auto;
      width: 72%;
      height: 2.8em;
      opacity: .8;
      border-style: solid;
      border-width: thin;
      border-color: #efefef;
      background-color: #fcfcfc !important;
    }
    > button {
      width: 72%;
      height: 2em;
      border-radius: 500px;
      margin-top: 8px;
      font-weight: 800;
      color: $primary-color-darker-darker;
      border-color: $primary-color-darker-darker;
      border-style: solid;
      margin-top: 20px;
    }
  }
}
/* ... */

